# vk-site

./: .dockerignore  .gitignore  TEST_SUCSESS  combined_js.js  combined_python.py  commands.txt  configs.txt  docker-compose.prod.yml  docker-compose.yml  init-db.sh  loki-config.yaml  python combine.py  worker.Dockerfile
backend/: Dockerfile  alembic.ini  all_notifications.json  celerybeat-schedule  pyproject.toml  pytest.ini  schedule.db
backend/app/: admin.py  arq_config.py  celery_app.py  celery_worker.py  main.py  worker.py
backend/app/admin/: __init__.py  auth.py
backend/app/ai/: unified_service.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  config_loader.py  constants.py  enums.py  exceptions.py  logging.py  plans.py  security.py  tracing.py
backend/app/db/: base.py  enums.py  models.py  scheduler_models.py  session.py
backend/app/repositories/: base.py  stats.py  user.py
backend/app/services/: ai_message_service.py  analytics_service.py  automation_service.py  base.py  data_service.py  (+19 more)
backend/migrations/: env.py
backend/scripts/: vk_api_health_check.py
backend/tests/: backend - Ярлык.lnk  conftest.py  test_auth.py  test_billing.py  test_complex_scenarios.py  test_content_tasks.py  test_filter_diagnostics.py  test_filters.py  test_friend_tasks.py  test_group_tasks.py  test_messaging_tasks.py  test_permissions_and_edge_cases.py  test_proxy_endpoints.py  test_real_vk_interactions.py  test_robustness_and_billing.py  test_scenarios.py  test_task_management.py  test_tasks.py  test_team_features.py  test_user_endpoints.py
(+411 files in other folders)
